--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body{
     font-family: "Roboto", sans-serif;
     color: #434455;
-    background-color: #F4F4FD;
+    background-color: #FFF;
 }
 a{
     text-decoration: none;
@@ -47,19 +47,22 @@ main{
     font-family: ;
     background-color: #2E2F42;
 }
-.h1 {color: #FFF;
+.effective {
     text-align: center;
     font-family: Roboto;
     font-size: 56px;
     font-weight: 700;
-    line-height: 60px;
-    letter-spacing: 1.12px;
-
+    line-height: 1.07em;
+    letter-spacing: 0.02em;
+    color: #fff;
+    background-color :#2E2F42;
 }
 .button{
-    border-radius: 4px;
-background: #4D5AE5;
-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-font-weight: 500
-line-height: 1.5px; 
+border-radius: 4px;
+background-color: #4D5AE5;
+font-weight: 500;
+line-height: 1.5em;
+letter-spacing: 0.04em; 
+cursor: pointer;
+color: #fff;
 }
