--- a/css/styles.css
+++ b/css/styles.css
@@ -66,8 +66,27 @@ main{
         cursor: pointer;
         color: #fff;
     }
- 
-section{
+    h3{
+    .strategy-link{
+     font-family: Roboto;
+    font-size: 16px;
+     font-weight: 400;
+     line-height: 24px;
+     letter-spacing: 0.02em;
+     text-align: left;
+       }
+section {
+    .section-tu{
+font-family: Roboto;
+font-size: 16px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0.02em;
+text-align: center;
+
+    }
+}
+   
     .strategi {
 
     }
