--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,19 @@ main{
      letter-spacing: 0.02em;
      text-align: left;
        }
+       section {
+        .section{
+     background-color:#2e2f42
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    text-align: center;
+        }
+    }
+      
+
 section {
     .section-tu{
 font-family: Roboto;
