--- a/css/styles.css
+++ b/css/styles.css
@@ -115,8 +115,10 @@ font-weight: 400;
         line-height: 1.5 
         letter-spacing: 0.02em;
     }
-    
-
+    .logo-part-foter{
+   color:  #F4F4FD;
+        
+    }
 
 .section-tu {
 }
