--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ ul, ol {
 .address-link {
     color: #434455;
     font-size: 16px;
-    line-height: 1.5em;
+    line-height: 1.5;
     letter-spacing: 0.02em;
 }
 .address-link:hover,
@@ -54,7 +54,7 @@ ul, ol {
         text-align: center;
         font-size: 56px;
         font-weight: 700;
-        line-height: 1.07em;
+        line-height: 1.07;
         letter-spacing: 0.02em;
         color: #fff;
         background-color :#2E2F42;
@@ -64,7 +64,7 @@ ul, ol {
       
         background-color: #4D5AE5;
         font-weight: 500;
-        line-height: 1.5em;
+        line-height: 1.5;
         letter-spacing: 0.04em; 
         cursor: pointer;
         color: #fff;
@@ -72,18 +72,48 @@ ul, ol {
     .hero-btn:focus {
         background-color: #404BBF;
         outline: none; 
-        box-shadow:;
+        box-shadow:0;
     }
-   
+    .hero-btn:hover{
+        background-color: #404BBF;
+    }
+
+    .section-forst{
+        background-color: #F4F4FD;
+    }
+    .title-Team{
+        color:  #2E2F42;
+        text-align: center;
+        font-size: 36px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 1.11;
+        letter-spacing: 0.02em;
+        text-transform: capitalize;
+    }
+ .li-fon{
+    color: #fff;
+ }
+
+
+
+     .title-Portfolio{
+    color:  #2E2F42;
+text-align: center;
+font-size: 36px;
+font-weight: 700;
+line-height: 1.11;
+letter-spacing: 0.02em;
+text-transform: capitalize;
+}
+
 .section {
 }
 
 
 .strategy-link {
     color:  #2E2F42;
-    /* Header 3 */
     font-size: 20px;
-    font-style: normal;
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.2em;    
@@ -92,11 +122,8 @@ ul, ol {
 
 .text {
     color: #434455;
-font-family: Roboto;
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
- line-height: 1.5 
+ font-size: 16px;
+ line-height: 1.5;
  letter-spacing: 0.02em
 }
 
@@ -116,7 +143,7 @@ font-weight: 400;
     }
 
     .text-our {
-        line-height: 1.5 
+        line-height: 1.5 ;
         letter-spacing: 0.02em;
     }
     .logo-part-foter{
@@ -125,6 +152,7 @@ font-weight: 400;
     }
 
 .section-tu {
+    
 }
 
 
