--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,7 @@ ul, ol {
         text-transform: capitalize;
     }
  .li-fon{
-    color: #fff;
+   background-color:  #ffff;
  }
 
 
@@ -157,7 +157,14 @@ text-transform: capitalize;
 
 
 
-
+.text-footer {
+color:  #F4F4FD;
+font-family: Roboto;
+font-size: 16px;
+font-weight: 400;
+line-height: 1.50;
+letter-spacing: 0.02em;
+}
 
 
     
