--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ ul, ol {
     .section-forst{
         background-color: #F4F4FD;
     }
-    .title-Team{
+    .title-team{
         color:  #2E2F42;
         text-align: center;
         font-size: 36px;
@@ -96,7 +96,7 @@ ul, ol {
 
 
 
-     .title-Portfolio{
+     .title-portfolio{
     color:  #2E2F42;
 text-align: center;
 font-size: 36px;
